# unitreeb2_ws

./: README.md
unitreeb2_ws/b2_description/: CMakeLists.txt  package.xml
unitreeb2_ws/b2_description/config/: b2_control.yaml
unitreeb2_ws/b2_description/launch/: b2.launch.py  b2_effort.launch.py  b2_position.launch.py  b2_velocity.launch.py
unitreeb2_ws/b2_description/model/: b2.xml  b2_with_scene.xml
unitreeb2_ws/b2_description/rviz/: view.rviz
unitreeb2_ws/b2_description/urdf/: b2_description_effort.xacro.urdf  b2_description_position.xacro.urdf  b2_description_velocity.xacro.urdf
unitreeb2_ws/b2_movement/: CMakeLists.txt  package.xml
unitreeb2_ws/b2_movement/src/: stand.cpp
